gccida/c1/gen_lowpart_for_combine
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10227:31: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_lowpart_for_combine( machine_mode mode, rtx x) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10232:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10232:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10236:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10250:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, v8); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10253:6: error: use of undeclared identifier 'result'
|| ( result = rtx->fld[0].rtx, ( unsigned __int16)*( _DWORD *)result != 66) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10253:63: error: use of undeclared identifier 'result'
|| ( result = rtx->fld[0].rtx, ( unsigned __int16)*( _DWORD *)result != 66) 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10254:66: error: use of undeclared identifier 'result'
|| ( rtx = rtx->fld[0].rtx, ( unsigned __int8)BYTE2( *( _DWORD *)result) != mode) ) 
                                                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10256:1: error: use of undeclared identifier 'result'
result = gen_lowpart_common( mode, rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10257:7: error: use of undeclared identifier 'result'
if ( !result ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10273:26: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                         ^~~~~~~~
                         rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10273:37: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10273:102: error: expected expression
return gen_rtx_fmt_ee( ( rtx_code)( unsigned __int16)*( _DWORD *)rtx, mode, rtx->fld[0].rtx, *( rtx *)&rtx[1]); 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10279:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, v8); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10282:1: error: use of undeclared identifier 'result'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10282:44: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( mode, rtx, ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v10); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10283:6: error: use of undeclared identifier 'result'
if ( result ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10284:8: error: use of undeclared identifier 'result'
return result; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/combine.c:10288:34: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_e( CLOBBER, ( machine_mode)v4, v8); 
                                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_lowpart_for_combine/src/obj/combine.o] Error 1
